-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.235 2008-04-01 14:33:13 remko Exp $
-----------------------------------------------------------------------------------------
2008-04-01	remko
	* gmt_proj.c:		Avoid error in GMT_lamb_sph when lat is 90 degrees.

2008-03-29	pwessel
	* pslib.[ch]:		Like in gmt, use PS_exit instead of exit to avoid Matlab shutdown.
	
2008-03-26	pwessel
	* gmt_grdio.c:		Now the grd i/o support the GMT_[DATA|IMG|GRID\DIR] environment settings.
	* grdinfo.c:		Reports actual path to the file (may change if GMT_GRIDDIR is involved).

2008-03-25	pwessel
	* pscontour.c:		Must deallocate *ind memory according to which function was used
	* triangulate.c:	Same.  Only affects Windows's insane memory management.

2008-03-24	pwessel
	* gmt_map.c:		Added new rectangular clip function using Sutherland/Hodgman algorithm
				in order to fix incorrect results in grdlandmask.
	* grdblend.c:		Did not pick up node registration before calculating output grid size.

2008-03-24	remko
	* gmt_io.c:		Implemented -b[i|o]c[<var1>/...] option to indicate input is netCDF.

2008-03-23	pwessel
	* ALL:			More solid 64-bit support after full cleansing with -Wconversion.  All 26
				examples runs clean in both 32-bit and 64-bit mode as do the entire GMT
				documentation.

2008-03-22	remko
	* gmt_nc.c:		Moved GMT_nc_get_att_text to gmt_io.c so it can be used more generally.
	* gmt_io.c:		Implemented GMT_nc_input to support reading netCDF column data (tables).
				This also required changes to GMT_fopen and making GMT_fclose a real routine
				rather than a macro.
	* gmt_io.h, gmt_globals.h:	Changed accordingly.
	* misc/nc2xy.c:		More space for long_name and units.

2008-03-22	pwessel
	* *.[ch]:		Experimental support for full 64-bit computing with introduction of 8-byte
				integers instead of 4-byte.
		
2008-03-19	remko
	* gmt_map.c (GMT_map_clip_path):	In polar projection, step size for drawing clip path