@@ -1,6 +1,6 @@
 REM		GMT EXAMPLE 19
 REM
-REM		$Id: job19.bat,v 1.13 2007-10-04 21:11:30 guru Exp $
+REM		$Id: job19.bat,v 1.14 2008-04-02 01:38:37 guru Exp $
 REM
 REM Purpose:	Illustrates various color pattern effects for maps
 REM GMT progs:	gmtset, grdimage, grdmath, makecpt, pscoast, pstext, psimage
@@ -22,9 +22,9 @@ pscoast -R -J -O -K -Dc -A5000 -Gc >> example_19.ps
 grdimage lon.grd -Sl -J -Clon.cpt -O -K >> example_19.ps
 pscoast -R -J -O -K -Q >> example_19.ps
 pscoast -R -J -O -K -Dc -A5000 -Wthinnest >> example_19.ps
-echo 0 20 32 0 1 CM 6TH INTERNATIONAL | pstext -R -J -O -K -Gred -Sthinner >> example_19.ps
+echo 0 20 32 0 1 CM 7TH INTERNATIONAL | pstext -R -J -O -K -Gred -Sthinner >> example_19.ps
 echo 0 -10 32 0 1 CM GMT CONFERENCE | pstext -R -J -O -K -Gred -Sthinner >> example_19.ps
-echo 0 -30 18 0 1 CM Honolulu, Hawaii, April 1, 2008 | pstext -R -J -O -K -Ggreen -Sthinnest >> example_19.ps
+echo 0 -30 18 0 1 CM Honolulu, Hawaii, April 1, 2009 | pstext -R -J -O -K -Ggreen -Sthinnest >> example_19.ps
 
 REM Then show example of color patterns and placing a PostScript image
 
@@ -40,9 +40,9 @@ pscoast -R -J -O -K -Dc -A5000 -Gc >> example_19.ps
 grdimage lat.grd -Sl -J -Clat.cpt -O -K >> example_19.ps
 pscoast -R -J -O -K -Q >> example_19.ps
 pscoast -R -J -O -K -Dc -A5000 -Wthinnest >> example_19.ps
-echo 0 20 32 0 1 CM 6TH INTERNATIONAL | pstext -R -J -O -K -Gred -Sthinner >> example_19.ps
+echo 0 20 32 0 1 CM 7TH INTERNATIONAL | pstext -R -J -O -K -Gred -Sthinner >> example_19.ps
 echo 0 -10 32 0 1 CM GMT CONFERENCE | pstext -R -J -O -K -Gred -Sthinner >> example_19.ps
-echo 0 -30 18 0 1 CM Honolulu, Hawaii, April 1, 2008 | pstext -R -J -O -Ggreen -Sthinnest >> example_19.ps
+echo 0 -30 18 0 1 CM Honolulu, Hawaii, April 1, 2009 | pstext -R -J -O -Ggreen -Sthinnest >> example_19.ps
 
 del l*.grd
 del l*.cpt
